SDM-2658: Added MessageAgePropertyReader and plumbing to make it work