@@ -7,7 +7,6 @@ import java.util.*;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 
@@ -52,7 +51,8 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
 
     private boolean satisfiesConditionsOnPresentValue(final T value) {
         return satisfiesSetConditions(value) //
-                && satisfiesPatternConditions(value);
+                && satisfiesPatternConditions(value) //
+                && satisfiesComparableConditions(value);
     }
 
     private boolean satisfiesSetConditions(final T value) {
@@ -69,6 +69,42 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
                 && (getDoesNotMatch().pattern().isEmpty() || !getDoesNotMatch().matcher(valueAsString).matches());
     }
 
+    private boolean satisfiesComparableConditions(final T value) {
+        if (getIsLessThan() == null && getIsLessOrEqualTo() == null
+                && getIsGreaterThan() == null && getIsGreaterOrEqualTo() == null) {
+            return true;
+        }
+
+        final Comparator<? super T> cmp = comparatorOrNatural();
+        try {
+            if (getIsLessThan() != null && !(cmp.compare(value, getIsLessThan()) < 0)) {
+                return false;
+            }
+            if (getIsLessOrEqualTo() != null && !(cmp.compare(value, getIsLessOrEqualTo()) <= 0)) {
+                return false;
+            }
+            if (getIsGreaterThan() != null && !(cmp.compare(value, getIsGreaterThan()) > 0)) {
+                return false;
+            }
+            return getIsGreaterOrEqualTo() == null || cmp.compare(value, getIsGreaterOrEqualTo()) >= 0;
+        } catch (final ClassCastException e) {
+            return false;
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private Comparator<? super T> comparatorOrNatural() {
+        if (getComparator() != null) {
+            return getComparator();
+        }
+        return (left, right) -> {
+            if (left instanceof Comparable) {
+                return ((Comparable<Object>) left).compareTo(right);
+            }
+            throw new ClassCastException("Value is not Comparable");
+        };
+    }
+
     public abstract PresencePolicy getPresence();
 
     public abstract Set<T> getIsAnyOf();
@@ -78,6 +114,21 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
     public abstract Pattern getMatches();
 
     public abstract Pattern getDoesNotMatch();
+
+    @Nullable
+    public abstract Comparator<? super T> getComparator();
+
+    @Nullable
+    public abstract T getIsLessThan();
+
+    @Nullable
+    public abstract T getIsLessOrEqualTo();
+
+    @Nullable
+    public abstract T getIsGreaterThan();
+
+    @Nullable
+    public abstract T getIsGreaterOrEqualTo();
 
     public abstract Builder<T> toBuilder();
 
@@ -89,7 +140,11 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
         appendCondition(builder, "isNoneOf", getIsNoneOf(), Set::isEmpty);
         appendCondition(builder, "matches", getMatches(), pattern -> pattern.pattern().isEmpty());
         appendCondition(builder, "doesNotMatch", getDoesNotMatch(), pattern -> pattern.pattern().isEmpty());
-        if (builder.length() > 0) {
+        appendCondition(builder, "isLessThan", getIsLessThan(), Objects::isNull);
+        appendCondition(builder, "isLessOrEqualTo", getIsLessOrEqualTo(), Objects::isNull);
+        appendCondition(builder, "isGreaterThan", getIsGreaterThan(), Objects::isNull);
+        appendCondition(builder, "isGreaterOrEqualTo", getIsGreaterOrEqualTo(), Objects::isNull);
+        if (!builder.isEmpty()) {
             builder.setLength(builder.length() - STRING_SEPARATOR.length());
         } else {
             return "isAnything";
@@ -151,12 +206,20 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
             return super.buildPartial();
         }
 
+        private boolean anyComparableBoundsSet() {
+            return getIsLessThan() != null
+                    || getIsLessOrEqualTo() != null
+                    || getIsGreaterThan() != null
+                    || getIsGreaterOrEqualTo() != null;
+        }
+
         private void validateState() {
             if (getPresence() == PresencePolicy.EMPTY && (//
                     !getIsAnyOf().isEmpty() //
                             || !getIsNoneOf().isEmpty() //
                             || !getMatches().pattern().isEmpty() //
-                            || !getDoesNotMatch().pattern().isEmpty())) {
+                            || !getDoesNotMatch().pattern().isEmpty()
+                            || anyComparableBoundsSet())) {
                 throw new IllegalStateException(//
                         appendCondition(new StringBuilder(), "presence", PresencePolicy.EMPTY, presence -> false)//
                                 .append(" is mutually exclusive with any other conditions")//
@@ -189,27 +252,84 @@ public abstract class GeneralPropertyPredicate<T> implements Predicate<T> {
             return clearIsNoneOf().addAllIsNoneOf(elements);
         }
 
+        @Override
+        public Builder<T> setComparator(final Comparator<? super T> comparator) {
+            super.setComparator(requireNonNull(comparator, "comparator"));
+            return this;
+        }
+
+        @Override
+        public Builder<T> setIsLessThan(final T boundExclusive) {
+            super.setIsLessThan(requireNonNull(boundExclusive, "boundExclusive"));
+            return this;
+        }
+
+        @Override
+        public Builder<T> setIsLessOrEqualTo(final T boundInclusive) {
+            super.setIsLessOrEqualTo(requireNonNull(boundInclusive, "boundInclusive"));
+            return this;
+        }
+
+        @Override
+        public Builder<T> setIsGreaterThan(final T boundExclusive) {
+            super.setIsGreaterThan(requireNonNull(boundExclusive, "boundExclusive"));
+            return this;
+        }
+
+        @Override
+        public Builder<T> setIsGreaterOrEqualTo(final T boundInclusive) {
+            super.setIsGreaterOrEqualTo(requireNonNull(boundInclusive, "boundInclusive"));
+            return this;
+        }
+
         public <T2> Builder<T2> transform(final Function<T, T2> function) {
             requireNonNull(function, "function");
-            return GeneralPropertyPredicate.<T2>builder()//
+            final Builder<T2> builder = GeneralPropertyPredicate.<T2>builder()//
                     .addAllIsAnyOf(getIsAnyOf().stream().map(function))//
                     .addAllIsNoneOf(getIsNoneOf().stream().map(function))//
                     .setMatches(getMatches())//
                     .setDoesNotMatch(getDoesNotMatch())//
                     .setPresence(getPresence());
+
+            if (getIsLessThan() != null) {
+                builder.setIsLessThan(function.apply(getIsLessThan()));
+            }
+            if (getIsLessOrEqualTo() != null) {
+                builder.setIsLessOrEqualTo(function.apply(getIsLessOrEqualTo()));
+            }
+            if (getIsGreaterThan() != null) {
+                builder.setIsGreaterThan(function.apply(getIsGreaterThan()));
+            }
+            if (getIsGreaterOrEqualTo() != null) {
+                builder.setIsGreaterOrEqualTo(function.apply(getIsGreaterOrEqualTo()));
+            }
+            return builder;
         }
 
         public Builder<T> validate(final Predicate<T> validator) {
             requireNonNull(validator, "validator");
             validate("isAnyOf", getIsAnyOf(), validator);
             validate("isNoneOf", getIsNoneOf(), validator);
+
+            if (getIsLessThan() != null && !validator.test(getIsLessThan())) {
+                throw new IllegalStateException("isLessThan: invalid value: " + getIsLessThan());
+            }
+            if (getIsLessOrEqualTo() != null && !validator.test(getIsLessOrEqualTo())) {
+                throw new IllegalStateException("isLessOrEqualTo: invalid value: " + getIsLessOrEqualTo());
+            }
+            if (getIsGreaterThan() != null && !validator.test(getIsGreaterThan())) {
+                throw new IllegalStateException("isGreaterThan: invalid value: " + getIsGreaterThan());
+            }
+            if (getIsGreaterOrEqualTo() != null && !validator.test(getIsGreaterOrEqualTo())) {
+                throw new IllegalStateException("isGreaterOrEqualTo: invalid value: " + getIsGreaterOrEqualTo());
+            }
             return this;
         }
 
         private void validate(final String name, final Set<T> values, final Predicate<T> validator) {
             final List<T> invalidValues = values.stream()//
                     .filter(value -> !validator.test(value))//
-                    .collect(Collectors.toList());
+                    .toList();
             if (!invalidValues.isEmpty()) {
                 throw new IllegalStateException(name + ": invalid values: " + invalidValues);
             }
